First version of episode template

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -185,6 +185,27 @@ a, a:hover, a:visited {
   margin: 5px auto 22px;
   position: relative; }
 
+#smallban {
+  height: 52px;
+  width: 950px;
+  margin: 5px auto 22px;
+  position: relative; }
+  #smallban p a {
+    display: block;
+    text-align: justify;
+    font-size: 30px;
+    text-transform: uppercase;
+    /*
+    background-color: white;
+    width: 530px;
+    */
+    padding-top: 8px;
+    padding-left: 34px; }
+    #smallban p a strong {
+      font-size: 42px;
+      font-weight: normal;
+      margin-right: 10px; }
+
 #img_ban {
   margin: 1px 0 0 44px;
   position: absolute;
@@ -192,6 +213,14 @@ a, a:hover, a:visited {
   width: 500px;
   height: 275px;
   overflow: hidden; }
+  #img_ban span.caption {
+    font-family: "dine";
+    position: absolute;
+    top: 240px;
+    right: 15px;
+    color: #E34635;
+    font-size: 30px;
+    text-shadow: 1px 1px white; }
 
 #header_share {
   position: absolute;
@@ -415,3 +444,53 @@ a, a:hover, a:visited {
   font-weight: normal;
   text-align: center;
   font-family: "dine"; }
+
+.content_sidebar .widgetcontent {
+  background: url("../images/bg_content_sidebar.png") repeat-y;
+  padding: 0 20px 20px;
+  font-size: 14px;
+  font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif; }
+
+.content_sidebar ul.partenaires {
+  margin-top: 16px; }
+  .content_sidebar ul.partenaires li {
+    padding: 3px 0; }
+
+.content_sidebar a {
+  color: #e34635; }
+
+body.episode .description img {
+  float: right;
+  margin-left: 1em; }
+
+.content_sidebar .audio {
+  text-align: center;
+  width: 300px;
+  background: url("../images/bg_content_sidebar.png") repeat-y;
+  font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  padding-bottom: 20px;
+  margin-bottom: 20px; }
+  .content_sidebar .audio .name {
+    font-size: 18px;
+    font-family: "dine"; }
+  .content_sidebar .audio .links a {
+    color: #E34635; }
+  .content_sidebar .audio .ui360-vis {
+    margin-left: 25px; }
+    .content_sidebar .audio .ui360-vis .sm2_link {
+      display: none; }
+
+body.show #archives a {
+  font-size: 18px;
+  font-family: "dine";
+  display: block;
+  width: 70px;
+  height: 45px;
+  padding-top: 25px;
+  color: white;
+  background-color: #E34635;
+  text-align: center;
+  float: left;
+  margin-left: 10px;
+  margin-top: 10px; }
