--- a/stylesheets/header.scss
+++ b/stylesheets/header.scss
@@ -65,6 +65,34 @@
 	position: relative;
 }
 
+#smallban {
+	height: 52px;
+	width: 950px;
+	margin: 5px auto 22px;
+	position: relative;
+
+  p a {
+      display: block;
+	    text-align: justify;
+      font-size: 30px;
+      text-transform: uppercase;
+
+      /*
+      background-color: white;
+      width: 530px;
+      */
+
+      padding-top: 8px;
+      padding-left: 34px;
+
+      strong {
+          font-size: 42px;
+          font-weight: normal;
+          margin-right: 10px;
+      }
+  }      
+}
+
 #img_ban {
 	margin: 1px 0 0 44px;
 	position: absolute;
@@ -73,6 +101,16 @@
   width: 500px; 
   height: 275px;
   overflow:hidden;
+
+  span.caption {
+	    font-family:"dine";
+      position: absolute;
+      top: 240px;
+      right: 15px;
+      color: #E34635;
+      font-size: 30px;
+      text-shadow: 1px 1px white;
+  }
 }
 
 #header_share{
