Add OpenGraph tag for Show and Episode

--- a/_head.liquid
+++ b/_head.liquid
@@ -1,7 +1,8 @@
     <meta charset="UTF-8" />
-    <meta property="og:title" content="Esperanzah! 2012">		
+
     <meta property="og:type" content="Event" />
-    <meta property="og:site_name" content="Esperanzah! 2012">
+    <meta property="og:site_name" content="Radio Esperanzah! 2012"/>
+
     <meta name="keywords" content="Esperanzah, Esperanzah!, festival, musique, floreffe, namur, belgique" />
     <meta name="description" content="Festival Esperanzah!, du 3 au 5 août à l'Abbaye de Floreffe"/>
     <meta name="rating" content="general" />
