Use Show#description as html description

--- a/_head.liquid
+++ b/_head.liquid
@@ -3,8 +3,8 @@
     <meta property="og:type" content="Event" />
     <meta property="og:site_name" content="Radio Esperanzah! 2012"/>
 
-    <meta name="keywords" content="Esperanzah, Esperanzah!, festival, musique, floreffe, namur, belgique" />
-    <meta name="description" content="Festival Esperanzah!, du 3 au 5 août à l'Abbaye de Floreffe"/>
+    <meta name="keywords" content="radio, esperanzah, festival, musique, floreffe, namur, belgique" />
+    <meta name="description" content="{{ show.description }}"/>
     <meta name="rating" content="general" />
     <meta name="expires" content="never" />
     <meta name="revisit-after" content="7 days" />
