Fixes og:image url in episode

--- a/episode.liquid
+++ b/episode.liquid
@@ -7,7 +7,7 @@
     <title>{{ show.name }}</title>
 
     <meta property="og:title" content="{{ episode.title }} sur {{ show.name }}"/>		
-    <meta property="og:image" content="{{show.url_for}}{{ episode.image.url_for }}" />
+    <meta property="og:image" content="{{ episode.image.url_for }}" />
   </head>
   <body class="episode">
 	  <div id="container">
