Use a longer title for twitter share

--- a/episode.liquid
+++ b/episode.liquid
@@ -40,7 +40,7 @@
 						        <a href="http://www.facebook.com/share.php?u={{episode.url_for}}" title="Partager sur Facebook" target="_blank">
                       <img src="{{theme.url_for_assets}}/images/picto_fb_mini.png" alt="Partager sur FaceBook">
                     </a>
-						        <a href="http://twitter.com/intent/tweet?hashtags=esperanzah&amp;text={{episode.title}}&amp;url={{episode.url_for}}" title="Partagez sur Twitter" target="_blank">
+						        <a href="http://twitter.com/intent/tweet?hashtags=esperanzah&amp;text={{ episode.title }} sur {{ show.name }}&amp;url={{episode.url_for}}" title="Partagez sur Twitter" target="_blank">
                       <img src="{{theme.url_for_assets}}/images/picto_tw_mini.png" alt="Partagez sur Twitter">
                     </a>
 					          <span>Vous avez aimé ? Partagez !</span>
