Fixes dinengschriftstd.otf ulr

--- a/_head.liquid
+++ b/_head.liquid
@@ -36,7 +36,7 @@
         <style>
           @font-face{
   	      font-family: "dine";
-	        src: url("media/DINEngschriftStd.otf");
+	        src: url("media/dinengschriftstd.otf");
           }
         </style>
         <![endif]-->
