Ajout de la grille dans la home

--- a/show.liquid
+++ b/show.liquid
@@ -68,8 +68,10 @@
 		      </div>
           {% endfor %}
 
+          {% include 're2012/program' %}
+
           <div class="articles">
-			      <div class="header_articles">
+			      <div class="smallheader_articles">
 				      <h1>
                 Archives
               </h1>
