--- a/stylesheets/sidebar.scss
+++ b/stylesheets/sidebar.scss
@@ -58,6 +58,7 @@
 	padding: 0 20px 20px;
   font-size: 14px;
 	font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif; 
+  margin-bottom: 28px;
 }
 
 .content_sidebar ul.partenaires {
