Fixes Radio Libellule link

--- a/_sidebar_partenaires.liquid
+++ b/_sidebar_partenaires.liquid
@@ -8,7 +8,7 @@
                 <li><a href="http://www.run.be" title="Radio Universitaire Namuroise">Radio Universitaire Namuroise</a></li>
                 <li><a href="http://www.youfm.be" title="You FM">You FM</a></li>
                 <li><a href="http://www.radiocampus.be" title="Radio Campus Bruxelles">Radio Campus Bruxelles</a></li>
-                <li><a href="http://www.libellulefm.com/"> title="Radio Libellule">Radio Libellule</a></li>
+                <li><a href="http://www.libellulefm.com" title="Radio Libellule">Radio Libellule</a></li>
                 <li><a href="http://www.radiocampusmontpellier.fr" title="Radio Campus Montpellier">Radio Campus Montpellier</a></li>
                 <li><a href="http://www.radiocampusamiens.com" title="Radio Campus Amiens">Radio Campus Amiens</a></li>
                 <li><a href="http://www.lautreradio.fr" title="L'Autre Radio">L'Autre Radio</a></li>
