--- a/_program.liquid
+++ b/_program.liquid
@@ -6,8 +6,18 @@
 			      </div>
 			      <div class="txt_articles">			
 						  <div class="excerpt_txt">
-                {% for episode in show.tag.jeudi reversed %}
-                {% if forloop.first %}<h3>Jeudi 2 août</h3>{% endif %}
+                {% for episode in show.tag.samedi reversed %}
+                {% if forloop.first %}<h3>Aujourd'hui</h3>{% endif %}
+                {% include 're2012/program_episode' %}
+                {% endfor %}
+
+                {% for episode in show.tag.dimanche reversed %}
+                {% if forloop.first %}<h3>Dimanche 5 août</h3>{% endif %}
+                {% include 're2012/program_episode' %}
+                {% endfor %}
+
+                {% for episode in show.tag.reportage reversed %}
+                {% if forloop.first %}<h3>Reportages</h3>{% endif %}
                 {% include 're2012/program_episode' %}
                 {% endfor %}
 
@@ -16,15 +26,16 @@
                 {% include 're2012/program_episode' %}
                 {% endfor %}
 
-                {% for episode in show.tag.samedi reversed %}
-                {% if forloop.first %}<h3>Samedi 4 août</h3>{% endif %}
+                {% for episode in show.tag.jeudi reversed %}
+                {% if forloop.first %}<h3>Jeudi 2 août</h3>{% endif %}
                 {% include 're2012/program_episode' %}
                 {% endfor %}
 
-                {% for episode in show.tag.dimanche reversed %}
-                {% if forloop.first %}<h3>Dimanche 5 août</h3>{% endif %}
+                {% for episode in show.tag.podcast reversed %}
+                {% if forloop.first %}<h3>Podcast</h3>{% endif %}
                 {% include 're2012/program_episode' %}
                 {% endfor %}
+
                 <div class="clear"></div>
               </div>
             </div>
