--- a/episode.liquid
+++ b/episode.liquid
@@ -15,6 +15,7 @@
 
       <div id="content">
         <div class="content_articles">
+
           <div class="articles">
 			      <div class="header_articles">
 				      <h1>
@@ -61,6 +62,8 @@
 			        </div>
 			      </div>
 		      </div>
+
+          {% include 're2012/program' %}
         </div>
 
         <div class="content_sidebar">
