Add a stream template with 'mobile' layout

--- a/_live.liquid
+++ b/_live.liquid
@@ -1,6 +1,7 @@
       <script>
-        threeSixtyPlayer.config.autoPlay = true;
+        threeSixtyPlayer.config.autoPlay = false;
         threeSixtyPlayer.config.showHMSTime = false;
+        threeSixtyPlayer.config.playRingColor = threeSixtyPlayer.config.loadRingColor;
       </script>
 
       <div id="live" class="articles">
