re Enable autoplay

--- a/_live.liquid
+++ b/_live.liquid
@@ -1,5 +1,5 @@
       <script>
-        threeSixtyPlayer.config.autoPlay = false;
+        threeSixtyPlayer.config.autoPlay = true;
         threeSixtyPlayer.config.showHMSTime = false;
         threeSixtyPlayer.config.playRingColor = threeSixtyPlayer.config.loadRingColor;
       </script>
