--- a/stylesheets/live.scss
+++ b/stylesheets/live.scss
@@ -53,8 +53,19 @@ body.live {
         width: 300px;
     }
 
+    .liens_share {
+        margin: 5px auto;
+        width: 300px;
+        text-align: center;
+
+        a {
+          margin-left: 12px;
+        }
+    }
+
     .excerpt_txt {
         width: 100%;
+        padding-bottom: 14px;
     }
 
     .footer_articles {
@@ -87,16 +98,6 @@ body.live {
         }
 
     }
-
-
-    .ui360-vis {
-
-    }
-
-    .ui360 a {
-        
-    }
-
 
     .ui360-vis .sm2-360ui {
         margin-left: 0;
