Remove live and restore posts

--- a/show.liquid
+++ b/show.liquid
@@ -79,7 +79,7 @@
       <div id="content">
         <div class="content_articles">
 
-          {% include 're2012/live' %}
+          {% include 're2012/posts' %}
           {% include 're2012/program' %}
 
           <div class="articles">
